--- a/task5/index.html
+++ b/task5/index.html
@@ -17,21 +17,59 @@
       <a href="#" class="header__link link">Все коллекции</a>
     </div>
     <div class="carousel">
-      <figure class="carousel__item item">
-        <img class="item__img" src="images/image 8.png" alt="Terma">
-        <h3 class="item__subtitle">Коллекция</h3>
-        <a href="#" class="item__title">Terma</a>
-      </figure>
-      <figure class="carousel__item item">
-        <img class="item__img" src="images/image 7.1.png" alt="Вилланелла">
-        <h3 class="item__subtitle">Коллекция</h3>
-        <a href="#" class="item__title">Вилланелла</a>
-      </figure>
-      <figure class="carousel__item item">
-        <img class="item__img" src="images/image 7.png" alt="Alcor">
-        <h3 class="item__subtitle">Коллекция</h3>
-        <a href="#" class="item__title">Alcor</a>
-      </figure>
+      <div class="carousel__wrap">
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 8.png" alt="Terma">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Terma</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.1.png" alt="Вилланелла">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Вилланелла</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.png" alt="Alcor">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Alcor</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.1.png" alt="Terma">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Terma</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.png" alt="Вилланелла">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Вилланелла</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 8.png" alt="Alcor">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Alcor</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.png" alt="Terma">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Terma</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 8.png" alt="Вилланелла">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Вилланелла</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.1.png" alt="Alcor">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Alcor</a>
+        </figure>
+        <figure class="carousel__item item">
+          <img class="item__img" src="images/image 7.png" alt="Alcor">
+          <h3 class="item__subtitle">Коллекция</h3>
+          <a href="#" class="item__title">Alcor</a>
+        </figure>
+      </div>
+
     </div>
     <div class="pagination">
       <div class="pagination__item counter">
@@ -44,9 +82,9 @@
         <i class="fas fa-chevron-right controls__item"></i>
       </div>
     </div>
+    <a href="#" class="link link-m">Все коллекции</a>
   </div>
 
-  <a href="#" class="link link-m">Все коллекции</a>
 
   <script src="https://kit.fontawesome.com/e3003b01be.js"></script>
 </body>
