--- a/task5/index.html
+++ b/task5/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="header__link link">Все коллекции</a>
     </div>
     <div class="carousel">
-      <div class="carousel__wrap">
+      <div class="carousel__wrap" style="transform:translateX(0)">
         <figure class="carousel__item item">
           <img class="item__img" src="images/image 8.png" alt="Terma">
           <h3 class="item__subtitle">Коллекция</h3>
@@ -73,13 +73,13 @@
     </div>
     <div class="pagination">
       <div class="pagination__item counter">
-        <span class="counter__current">3</span>
+        <span class="counter__current">1</span>
         <span class="counter__separator">/</span>
         <span class="counter__total">10</span>
       </div>
       <div class="pagination__item controls">
-        <i class="fas fa-chevron-left controls__item"></i>
-        <i class="fas fa-chevron-right controls__item"></i>
+        <i class="fas fa-chevron-left controls__item controls__item_left"></i>
+        <i class="fas fa-chevron-right controls__item controls__item_right"></i>
       </div>
     </div>
     <a href="#" class="link link-m">Все коллекции</a>
@@ -87,6 +87,7 @@
 
 
   <script src="https://kit.fontawesome.com/e3003b01be.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
